service-monitor/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-monitor
  namespace: agricore
spec:
  selector:
    matchLabels:
      app: service-monitor
  template:
    metadata:
      labels:
        app: service-monitor
    spec:
      containers:
        - name: service-monitor
          image: # TO_MODIFY: Replace with the correct image path
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 80
      imagePullSecrets:
        - name: # TO_MODIFY: Replace with the correct image pull secret name

---
