service-monitor/ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-monitor-svc
  namespace: agricore
spec:
  selector:
    app: service-monitor
  ports:
    - port: 80
      targetPort: 80
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: service-monitor-ingress
  namespace: agricore
spec:
  entryPoints:
    - websecure
  routes:
    - match: # TO_MODIFY: Replace with the host rule (e.g., Host('<host-name>'))
      kind: Rule
      services:
        - name: service-monitor-svc
          port: 80
  tls:
    secretName: tls-service-monitor
